chapter 4 helper fn

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
-<% provide(:title, 'Home')  %>
+<%# this is a comment from chapter 3
+ <% provide(:title, 'Home')  %> 
+
 
 <h1>Sample App</h1>
 <p>
