--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,12 @@
 <html>
 <head>
   
-  <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
+ <!-- chapter 3 title 
+ <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title> -->
+
+<title>
+	<%= full_title(yield(:title)) %> 
+</title>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
