--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,13 @@
 <%# this is a comment from chapter 3
  <% provide(:title, 'Home')  %> 
 
+<div class="center hero-unit">
+	<h1>Sample App</h1>
+	<h2>
+		This is the homepage for...
+	</h2>
 
-<h1>Sample App</h1>
-<p>
-	This is the home page for chapter 3
-</p>
+	<%= link_to "Sign Up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt:"Rails"), 'http://rubyonrails.org/' %>
