--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 		This is the homepage for...
 	</h2>
 
-	<%= link_to "Sign Up now!", '#', class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign Up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt:"Rails"), 'http://rubyonrails.org/' %>
